added feed page

--- a/main.html
+++ b/main.html
@@ -67,25 +67,25 @@
     <div class='main-footer'>
       <div class='ft-first'> 
         <div class="first-line">
-          <a href="https://about.instagram.com/">About</a>
-          <a href="https://about.instagram.com/blog/">Blog</a>
-          <a href="https://www.instagram.com/about/jobs/">Jobs</a>
-          <a href="https://developers.facebook.com/docs/instagram">API</a>
-          <a href="https://www.instagram.com/legal/privacy/">Privacy</a>
-          <a href="https://www.instagram.com/legal/terms/">Terms</a>
-          <a href="https://www.instagram.com/directory/profiles/">Top Accounts</a>
-          <a href="https://www.instagram.com/directory/hashtags/">Hashtags</a>
-          <a href="https://www.instagram.com/explore/locations/">Locations</a>
-          <a href="https://www.instagram.com/web/lite/">Instgram Lite</a>
+          <a target='_blank' href="https://about.instagram.com/">About</a>
+          <a target='_blank' href="https://about.instagram.com/blog/">Blog</a>
+          <a target='_blank' href="https://www.instagram.com/about/jobs/">Jobs</a>
+          <a target='_blank' href="https://developers.facebook.com/docs/instagram">API</a>
+          <a target='_blank' href="https://www.instagram.com/legal/privacy/">Privacy</a>
+          <a target='_blank' href="https://www.instagram.com/legal/terms/">Terms</a>
+          <a target='_blank' href="https://www.instagram.com/directory/profiles/">Top Accounts</a>
+          <a target='_blank' href="https://www.instagram.com/directory/hashtags/">Hashtags</a>
+          <a target='_blank' href="https://www.instagram.com/explore/locations/">Locations</a>
+          <a target='_blank' href="https://www.instagram.com/web/lite/">Instgram Lite</a>
         </div>
         <div class="second-line">
-          <a href="https://www.instagram.com/topics/beauty/">Beauty</a>
-          <a href="https://www.instagram.com/topics/dance-and-performance/">Dance</a>
-          <a href="https://www.instagram.com/topics/fitness/">Fitness</a>
-          <a href="https://www.instagram.com/topics/food-and-drink/">Food & Drink</a>
-          <a href="https://www.instagram.com/topics/home-and-garden/">Home & Garden</a>
-          <a href="https://www.instagram.com/topics/music/">Music</a>
-          <a href="https://www.instagram.com/topics/visual-arts/">Visual Arts</a>
+          <a target='_blank' href="https://www.instagram.com/topics/beauty/">Beauty</a>
+          <a target='_blank' href="https://www.instagram.com/topics/dance-and-performance/">Dance</a>
+          <a target='_blank' href="https://www.instagram.com/topics/fitness/">Fitness</a>
+          <a target='_blank' href="https://www.instagram.com/topics/food-and-drink/">Food & Drink</a>
+          <a target='_blank' href="https://www.instagram.com/topics/home-and-garden/">Home & Garden</a>
+          <a target='_blank' href="https://www.instagram.com/topics/music/">Music</a>
+          <a target='_blank' href="https://www.instagram.com/topics/visual-arts/">Visual Arts</a>
 
         </div>
       </div>
