added profile page

--- a/feed.html
+++ b/feed.html
@@ -13,11 +13,11 @@
     <div class="nav-container">
       <div class="bar">
         <div class="insta-logo">
-          <a href="https://www.instagram.com">
+          <a href="./feed.html">
             <img src="./assets/main/logo.png" alt="go-to-instagram">
           </a>
         </div>
-        <div class="serach">
+        <div class="search">
           <form action="#">
             <label for="search-input"></label>
             <input type="text" class='search-input' placeholder="Search" >
@@ -245,7 +245,7 @@
         <div class="current-user">
           <div class="profile-img">
             <a href=""#><img class='user-img' src="./assets/feed/profile.png" alt="user-img"></a>
-            <a class='user-id' href="#">wo__o.jin</a>
+            <a class='user-id' href="./profile.html">wo__o.jin</a>
             <button class='switch'>Switch</button>
           </div>
         </div>
